2009-09-04  Tony Chang  <tony@chromium.org>

Reviewed by Eric Seidel.

        Implement <input type="range"> for Chromium Linux by painting
        the slider and the thumb using skia.
        https://bugs.webkit.org/show_bug.cgi?id=28928

        Covered by existing tests (we're currently hitting an assert for them).

        * rendering/RenderThemeChromiumLinux.cpp:
        (WebCore::RenderThemeChromiumLinux::adjustSliderThumbSize):
        * rendering/RenderThemeChromiumLinux.h:
        * rendering/RenderThemeChromiumSkia.cpp:
        (WebCore::drawVertLine):
        (WebCore::drawHorizLine):
        (WebCore::drawBox):
        (WebCore::RenderThemeChromiumSkia::paintSliderTrack):
        (WebCore::RenderThemeChromiumSkia::paintSliderThumb):
        * rendering/RenderThemeChromiumSkia.h:

Canonical link: https://commits.webkit.org/39621@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@48045 268f45cc-cd09-0410-ab3c-d52691b4dbfc