WebCore/rendering/RenderThemeChromiumLinux.h
@@ -49,6 +49,8 @@ namespace WebCore {
         virtual Color inactiveListBoxSelectionBackgroundColor() const;
         virtual Color inactiveListBoxSelectionForegroundColor() const;
 
+        virtual void adjustSliderThumbSize(RenderObject*) const;
+
         void setFocusRingColor(const Color&);
         virtual Color platformFocusRingColor() const;
 
